<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <logan.example.com.trianglesolver.Triangle
        android:id="@+id/triangle_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/area_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/side_a_edit"
        app:layout_constraintStart_toStartOf="@+id/side_a_edit" />

    <TextView
        android:id="@+id/perimeter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/angle_a_edit"
        app:layout_constraintStart_toStartOf="@+id/angle_a_edit" />

    <EditText
        android:id="@+id/side_a_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/side_a"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/side_b_edit"
        app:layout_constraintEnd_toStartOf="@+id/angle_a_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/side_b_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/side_b"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/side_c_edit"
        app:layout_constraintEnd_toStartOf="@+id/angle_b_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/side_c_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/side_c"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/reset_button"
        app:layout_constraintEnd_toStartOf="@+id/angle_c_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/angle_a_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/angle_a"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/angle_b_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/side_a_edit" />

    <EditText
        android:id="@+id/angle_b_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/angle_b"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/angle_c_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/side_b_edit" />

    <EditText
        android:id="@+id/angle_c_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="6"
        android:hint="@string/angle_c"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/solve_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/side_c_edit" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="resetCanvas"
        android:text="@string/reset"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toStartOf="@+id/solve_button"
        custom:layout_constraintHorizontal_bias="0.5"
        custom:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/solve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="solveTriangle"
        android:text="@string/solve"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toEndOf="@+id/reset_button" />

    <android.support.constraint.Group
        android:id="@+id/data_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="angle_b_edit,side_c_edit,side_b_edit,perimeter_text,angle_a_edit,area_text,angle_c_edit,side_a_edit" />

</android.support.constraint.ConstraintLayout>